--- a/index.html/css/20220819安岡.css
+++ b/index.html/css/20220819安岡.css
@@ -7,7 +7,7 @@
 
 
 .title {
-  color: blue;
+  color: navy;
   margin-top: 10px;
   margin-left: 30px;
 
@@ -18,14 +18,14 @@
 .nav ul li {
 
   display: inline-block;
-  color: blue;
+  color: navy;
   margin-right: 10px;
   padding-right: 10px;
 
 }
 
 img {
-  position: relative;
+  position: absolute;
 
   width: 50%;
   height: 50%;
@@ -33,27 +33,47 @@ img {
   margin-right: 0;
   margin-left: auto;
   display: block;
+
+  top: 200px;
+  right: 50px;
+
+  z-index: 10;
+  
+
+
 }
 
 .box {
 
-  position: absolute;
+  position: relative;
 
   width: 75%;
   height: 150px;
-  background: blue;
+  background: navy;
+
+  top: 300px;
+  left: 10px;
+
+  z-index: 0;
+
+  margin-left: 0;
+
 }
 
-div.parent {
-  position: relative;
-  height: 300px;
 
-}
 
-p.text {
+
+.text {
   position: absolute;
-  bottom: 0;
-  margin: 0;
+
+  margin-left: 0;
+
+  
+  
+  top: 330px;
+  left: 10px;
+
+
 
   font-size: 60px;
 }
