--- a/index.html/css/20220819安岡.css
+++ b/index.html/css/20220819安岡.css
@@ -11,7 +11,7 @@
   margin-top: 10px;
   margin-left: 30px;
 
-
+font-size: 30px;
 }
 
 
@@ -28,17 +28,17 @@ img {
   position: absolute;
 
   width: 50%;
-  height: 50%;
+  height: 60%;
 
   margin-right: 0;
   margin-left: auto;
   display: block;
 
-  top: 200px;
-  right: 50px;
+  top: 130px;
+  right: 0px;
 
   z-index: 10;
-  
+
 
 
 }
@@ -52,7 +52,7 @@ img {
   background: navy;
 
   top: 300px;
-  left: 10px;
+  left: 0px;
 
   z-index: 0;
 
@@ -68,10 +68,10 @@ img {
 
   margin-left: 0;
 
-  
-  
+
+
   top: 330px;
-  left: 10px;
+  left: 0px;
 
 
 
